<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_home"
...
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/programList"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/home_page_list_views"
        android:dividerHeight="50dp"
        android:textColor="@color/colorPrimary"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/program"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/currentList"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/home_page_list_views"
        android:dividerHeight="50dp"
        android:textColor="@color/colorPrimary"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reps"
        app:layout_constraintTop_toBottomOf="@+id/reps" />

    <Button
        android:id="@+id/log"
        style="?android:textAppearanceMedium"
        android:layout_width="100dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="375dp"
        android:background="@drawable/exercise_db_button"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/logoutButton"
        style="?android:textAppearanceSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="0dp"
        android:background="@color/colorAccent"
...
