<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@mipmap/fitxlogo"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp">

    </ImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/browser_actions_bg_grey"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/browser_actions_bg_grey"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="#000000"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="#FFFF" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="#000000"
            android:text="@string/register"
            android:textColor="#FFFF" />
    </LinearLayout>

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/clear"
        android:textAllCaps="false"
        android:textColor="#000000" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#000080"
        android:text="@string/forgot_your_password"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/colorPrimary" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_100"
        android:indeterminate="true"
        android:max="100" />

</LinearLayout>