...
    <string name="activity_profile" />
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or">OR</string>
    <string name="register">Register!</string>
    <string name="login">Login</string>
    <string name="login_prompt">Login?</string>
    <string name="register_prompt">Register</string>
    <string name="authentication_failed">Auth Failed</string>
    <string name="auth_failure">Auth Failed</string>
    <string name="logout">Logout</string>
    <string name="clear">Clear</string>
    <string name="open_camera">Open Camera</string>
    <string name="profile_pic" />
    <string name="program">Current Program:</string>
    <string name="current_activity">Current Activity:</string>
    <string name="exercise">Exercise</string>
...
    <string name="add_program">Add Program</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="remove_exercise">Remove Exercise</string>
    <string name="remove_program">Remove Program</string>
    <string name="select_program">Select Program</string>
    <string name="log">Log</string>
    <string name="of_10_lb_plates"># of 10 lb plates</string>
    <string name="of_25_lb_plates"># of 25 lb plates</string>
    <string name="of_45_lb_plates"># of 45 lb plates</string>
    <string name="of_5_lb_plates"># of 5 lb plates</string>
    <string name="of_2_5_lb_plates"># of 2.5 lb plates</string>
    <string name="total">Total:</string>
...
